--- a/index.html
+++ b/index.html
@@ -1,111 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cricket-Page</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>National Cricket Team</h1>
-    </header>
-    <div class="sticky-image">
-      <img
-        src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003226_1714596295_pics1.png"
-      />
-      <article class="heading">
-        <h2>Indian Cricket Team</h2>
-        <h2>The Heart and Soul of India</h2>
-      </article>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cricket-Website</title>
+  <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+  <header>
+    <h1>National Cricket Team</h1>
+  </header>
+
+  <section class="sticky-image">
+    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003226_1714596295_pics1.png" />
+    <div>
+      <p>Indian Cricket Team</p>
+      <p>The heart and soul of India</p>
     </div>
-    <main>
-      <div class="coaches">
-        <div class="coach1">
-          <img
-            src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003227_1714596308_pics2.png"
-          />
-          <p>
-            <strong>Rahul Dravid<br />Coach</strong>
-          </p>
-        </div>
-        <div class="coach2">
-          <img
-            src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003228_1714596324_pics3.png"
-          />
-          <p>
-            <strong>Bharat Arun<br />Bowling-Coach</strong>
-          </p>
-        </div>
+  </section>
+  <main class="main-container">
+<div class="coaches">
+  <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003227_1714596308_pics2.png" />
+<div class="description">
+  <p>Rahul-Dravid </br>
+    Coach
+  </p>
+</div>
+</div>
 
-        <div class="coach3">
-          <img
-            src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003229_1714596356_pics4.png"
-          />
-          <p>
-            <strong>T. Dilip<br />Fielding-Coach</strong>
-          </p>
-        </div>
-      </div>
 
-      <div class="players">
-        <h2>Star Players</h2>
-        <dl>
-          <dt>
-            <figure>
-              <img
-                src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003230_1714596372_pics5.png"
-              />
-            </figure>
-          </dt>
-          <dd><b>Virat Kohli - Batsman</b></dd>
-          <dt>
-            <figure>
-              <img
-                src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003231_1714596390_pics6.png"
-              />
-            </figure>
-          </dt>
-          <dd><b>Rohit Sharma - Captain</b></dd>
-          <dt>
-            <figure>
-              <img
-                src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003232_1714596401_pics7.png"
-              />
-            </figure>
-          </dt>
-          <dd><b>Ravindra Jadeja - All-rounder</b></dd>
-        </dl>
-      </div>
-      <div class="ranking">
-        <table>
-          <thead>
-            <th>Format</th>
-            <th>Ranking</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>ODI Ranking</td>
-              <td>First</td>
-            </tr>
-            <tr>
-              <td>T20I Ranking</td>
-              <td>First</td>
-            </tr>
-            <tr>
-              <td>Test Ranking</td>
-              <td>First</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <footer>
-        <h3>&copy; 2024 BCCI</h3>
-        <h2>Indian Cricket Team</h2>
-        <h3>Established: 1928</h3>
-        <h3>Location: Churchgate, Mumbai</h3>
-        <h3>World Class Team</h3>
-      </footer>
-    </main>
-  </body>
+<div class="coaches">
+  <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003228_1714596324_pics3.png" />
+
+  <div class="description">
+    <p>Bharath-Arun </br>
+      Bowling Coach
+    </p>
+  </div>
+</div>
+
+
+<div class="coaches">
+  <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003229_1714596356_pics4.png" />
+  <div class="description">
+    <p>T.Dillip </br>
+      Fielding Coach
+    </p>
+  </div>
+</div>
+
+<div class="players">
+  
+  <div class="player1">
+    <div class="heading">
+      <h2>Star Players</h2>
+    </div>
+<figure>
+  <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003230_1714596372_pics5.png"/>
+  <figcaption>Virat Kholi(Batsman)</figcaption>
+  <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003231_1714596390_pics6.png"/>
+  <figcaption>Rohit Sharma(Batsman)</figcaption>
+  <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000003232_1714596401_pics7.png"/>
+  <figcaption>Jadeja(All Rounder)</figcaption>
+</figure>
+  </div>
+
+</div>
+
+<div class="ranking">
+  <table>
+    <thead>
+      <th>Format</th>
+      <th>Ranking</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ODI Ranking</td>
+        <td>First</td>
+      </tr>
+      <tr>
+        <td>T20I Ranking</td>
+        <td>First</td>
+      </tr>
+      <tr>
+        <td>Test Ranking</td>
+        <td>First</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<footer>
+  <h3>&copy; 2024 BCCI</h3>
+  <h2>Indian Cricket Team</h2>
+  <h3>Established: 1928</h3>
+  <h3>Location: Churchgate, Mumbai</h3>
+  <h3>World Class Team</h3>
+</footer>
+  </main>
+</body>
 </html>
